# vr-binaural-recorder

./: .gitignore  .gitmessage  CLAUDE.md  CLEANUP_COORDINATION_BRIEFING.md  CMakeLists.txt  CORRECTED_PROJECT_REQUIREMENTS.md  CRITICAL_IMPLEMENTATION_GAPS.md  DELETION_INVESTIGATION_REPORT.md  DEPENDENCY_REQUIREMENTS.md  DOCUMENTATION_SYNC_SUMMARY.md  Dockerfile  GIT_ACCOUNTABILITY_PROCEDURES.md  GROUND_TRUTH_TEST_RESULTS.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  PROJECT_STATUS.md  QA_EXECUTIVE_SUMMARY.md  QA_TEST_INFRASTRUCTURE_AUDIT.md  README.md  SESSION_SUMMARY.md  STATUS.md  SUCCESS_METRICS_AND_MONITORING.md  TEAM_COORDINATION_PLAN.md  TECHNICAL_AUDIT_REPORT.md  WINDOWS_VALIDATION_INSTRUCTIONS.md  check_status.sh  hrtf_datasets_config.json  rc_performance_test.cpp  test_audio_cmake.txt  test_audio_engine.cpp  test_callback  test_vr_tracker.cpp  vcpkg.json
.githooks/: post-commit  pre-commit
.github/workflows/: beta-release.yml
archive/audit-documentation/: ARCHITECTURAL_AUDIT_SUMMARY.md  ARCHITECTURAL_GOVERNANCE_PROCEDURES.md  ARCHITECTURE_AUDIT_DR_CHEN.md  ARCHITECTURE_DIVERGENCE_ANALYSIS.md  BETA_AUDIO_COMPLETION_REPORT.md  BETA_DISTRIBUTION_ARCHITECTURE.md  BETA_INSTALLATION_GUIDE.md  BETA_RELEASE_COMPLETION_SUMMARY.md  CEO_DECISION_BRIEF_EVIDENCE_BASED.md  CLEANUP_COORDINATION_BRIEFING.md  CLEANUP_FINAL.md  COMPRESSED_AUDIT_FINDINGS.md  CORRECTED_ARCHITECTURE_DESIGN.md  CROSS_PLATFORM_BUILD_REPORT.md  DEVELOPMENT_GOVERNANCE_PROCEDURES.md  MIKE_RODRIGUEZ_TECHNICAL_AUDIT.md  PREMIUM_HEADSET_SUPPORT.md  PROJECT_REALIGNMENT_SUMMARY.md  PROJECT_VISION_REALIGNMENT.md  QA_VALIDATION_REPORT.md  QA_VALIDATION_SUMMARY.md  QUEST_PRO_BIGSCREEN_BEYOND_IMPLEMENTATION.md  SIMPLIFICATION_REPORT.md  SUCCESS_METRICS_AND_MONITORING.md  TEAM_COORDINATION_PLAN.md  WINDOWS_DEPLOYMENT_COMPLETE.md  WINDOWS_RC_VALIDATION_REPORT.md
archive/historical/: ASMRTIST_INSTALLATION_VALIDATION_CHECKLIST.md  CLEANUP_EXECUTION_PLAN.md  CLEANUP_EXECUTIVE_SUMMARY.md  CLEANUP_FILE_MANIFEST.md  FINAL_PACKAGING_COORDINATION_SUMMARY.md  FINAL_WINDOWS_VR_PACKAGE_SUMMARY.md  PERFORMANCE_VALIDATION_PROTOCOLS.md  QA_AUDIT_DEPLOYMENT_BLOCKED.md  QA_VERIFICATION_REPORT_CRITICAL.md  REPOSITORY_CLEANUP_ANALYSIS.md  SPATIAL_AUDIO_VALIDATION.md  VP_ENGINEERING_DAILY_STATUS.md  VP_ENGINEERING_HANDOFF.md  VP_ENGINEERING_PROTOCOL.md  WINDOWS_CLEAN_INSTALL_TEST.md  WINDOWS_INSTALLER_TECHNICAL_ASSESSMENT.md  WINDOWS_TESTING_PACKAGE.md  WINDOWS_USER_TESTING_GUIDE.md  WINDOWS_VR_DEPLOYMENT_PACKAGE.md
archive/legacy-cleanup-scripts/: cleanup_redundant_docs.sh  create_ceo_deployment_package.sh
beta-coordination/: WINDOWS_BUILD_VIA_MCP.md  build-status.md  docs-status.md  integration-report.md  repo-cleanup.md
cmake/: WindowsConfig.cmake  vcpkg-toolchain.cmake
cmake/portaudio/: portaudioTargets.cmake
cmake/windows/: app.manifest
config/: hrtf_datasets_config.json  premium_headsets.json  vr_binaural_config.json  vr_binaural_config.json.example  vr_binaural_config_bulletproof.json
coordination-workspace/: README.md  architecture-extraction-report.md  docs-validation-report.md  history-extraction-report.md  integration-report.md  qa-extraction-report.md
core/include/: application.h  config.h  ring_buffer.h  vr_types.h
core/src/: application.cpp  config.cpp  main.cpp
demo/: microphone_positioning_demo.cpp  microphone_positioning_demo.h  simple_positioning_example.cpp
docs/: AGENT_CORE.md  AGENT_TEAM_DIALOGUE.md  ASMR_VR_DEMO_INSTRUCTIONS.md  BETA_LIMITATIONS.md  BETA_TESTING_GUIDE.md  HRTF_DATASET_STATUS.md  OBS_INTEGRATION_GUIDE.md  PROJECT_CONTEXT.md  PROJECT_GOVERNANCE.md  PROJECT_STATUS.md  QA_BETA_DEPLOYMENT_REPORT.md  SCRATCHPAD_USAGE_GUIDE.md  SHIP_CHECKLIST.md  VR_TESTING_GUIDE.md  WINDOWS_BETA_TEST_VALIDATION_STRATEGY.md  WINDOWS_VR_SETUP_GUIDE.md
docs/dev/: GIT_WORKFLOW.md  PROJECT_STATUS.md
examples/: ASMR_VR_EXPERIENCE_DEMO.cpp  VR_EXPERIENCE_VERIFICATION_DEMO.cpp  asmr_workflow_demo.cpp  premium_headset_integration.cpp  vr_demo.cpp
include/: application.h  audio_engine.h  config.h  logger.h  ring_buffer.h  utils.h  vr_types.h
memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
modules/audio/: audio_engine.cpp  audio_engine.h  hrtf_processor.cpp  hrtf_processor.h  windows_wasapi_virtual_device.cpp  windows_wasapi_virtual_device.h
modules/common/: utils.cpp  utils.h  windows_performance.h
modules/ui/: audio_routing_integration.cpp  audio_routing_overlay.cpp  audio_routing_overlay.h  overlay_ui.cpp  overlay_ui.h
modules/vr/: audio_cockpit_integration.cpp  vr_capabilities_manager.h  vr_hardware_detection.h  vr_testing_framework.h  vr_tracker.cpp  vr_tracker.h
packaging/appimage/: AppRun  VRBinauralRecorder.desktop  build_appimage.sh  create_icon.py
packaging/windows/: CMakeLists.txt  INSTALLER_ARCHITECTURE.md  build-info.json.in  build-via-mcp.ps1  (+7 more)
scripts/: pre-commit-governance.sh  setup-git-hooks.sh
src/: audio_engine.cpp  config.cpp  hrtf_processor.cpp  logger.cpp  main.cpp  overlay_ui.cpp  utils.cpp  vr_tracker.cpp
tests/: CMakeLists.txt  audio_cockpit_manual_validation.cpp  audio_cockpit_validation.cpp  audio_performance_tests.cpp  ceo_spatial_validation.cpp  compilation_fixes_validation.cpp  debug_distance_attenuation.cpp  debug_distance_test.cpp  debug_distance_test_real.cpp  direct_spatial_test.cpp  integration_tests.cpp  logger_stub.h  mike_hrtf_verification.cpp  simple_hrtf_test.cpp  simple_spatial_test.cpp  spatial_audio_validation_BLOCKING.cpp  spatial_verify  standalone_spatial_verification.cpp  test_bulletproof_config.cpp  test_config_advanced.cpp  test_json_config.cpp  test_openvr_api_validation.cpp  test_premium_headsets.cpp  test_suite.cpp  test_vrtracker_callback.cpp  validate_config.cpp  validate_vr_now.cpp  vr_headset_compatibility_tests.cpp  vr_integration_test.cpp  vr_validation_suite.cpp  windows_rc_validation.cpp
tests/dependency_verification/: CMakeLists.txt  test_hrtf.cpp  test_jsoncpp.cpp  test_portaudio.cpp
tests/standalone/: CMakeLists.txt  Makefile  test_audio_engine.cpp  test_vr_tracker.cpp
(+18 files in other folders)
